force-app/main/default/objects/numm__Etape_de_relance__c/numm__Etape_de_relance__c.object-meta.xml
<CustomObject>
    <label>Etape de relance</label>
    <nameField>
        <label>Numéro de l&#39;étape de relance</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Etapes de relance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>