force-app/main/default/objects/numm__Etape_de_relance__c/fields/numm__Declencheur__c.field-meta.xml
<CustomField>
    <fullName>numm__Declencheur__c</fullName>
    <label>Nb jours de dépassement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>