force-app/main/default/objects/numm__Etape_de_relance__c/fields/numm__Niveau__c.field-meta.xml
<CustomField>
    <fullName>numm__Niveau__c</fullName>
    <label>Niveau</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pré relance</fullName>
            </value>
            <value>
                <fullName>Niveau 1</fullName>
            </value>
            <value>
                <fullName>Niveau 2</fullName>
            </value>
            <value>
                <fullName>Niveau 3</fullName>
            </value>
            <value>
                <fullName>Contentieux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>