force-app/main/default/objects/numm__Etape_de_relance__c/fields/numm__Plan_de_relance__c.field-meta.xml
<CustomField>
    <fullName>numm__Plan_de_relance__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Plan de relance</label>
    <referenceTo>numm__Plan_de_relance__c</referenceTo>
    <relationshipLabel>Etapes de relance</relationshipLabel>
    <relationshipName>Etapes_de_relance</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>