force-app/main/default/objects/numm__Etape_de_relance__c/fields/numm__TechUniqEtapByPlan__c.field-meta.xml
<CustomField>
    <fullName>numm__TechUniqEtapByPlan__c</fullName>
    <label>TechUniqEtapByPlan</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>