force-app/main/default/objects/numm__Etape_de_relance__c/fields/numm__Type_de_relance2__c.field-meta.xml
<CustomField>
    <fullName>numm__Type_de_relance2__c</fullName>
    <label>Type de relance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Téléphone</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>RDV client</fullName>
            </value>
            <value>
                <fullName>Ecrite simple</fullName>
            </value>
            <value>
                <fullName>Ecrite RAR</fullName>
            </value>
            <value>
                <fullName>Mise en demeure RAR</fullName>
            </value>
            <value>
                <fullName>Contentieux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>