force-app/main/default/objects/numm__Etape_de_relance__c/fields/numm__Type_de_relance__c.field-meta.xml
<CustomField>
    <fullName>numm__Type_de_relance__c</fullName>
    <label>NU</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contentieux</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>