force-app/main/default/objects/numm__Etape_de_relance__c/validationRules/numm__Erreur_Format_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>numm__Erreur_Format_Name</fullName>
    <active>true</active>
    <description>Le numéro de relance (Name) doit être un numéro</description>
    <errorConditionFormula>NOT ISNUMBER(Name)</errorConditionFormula>
    <errorMessage>Le numéro de l&#39;étape doit être un numéro</errorMessage>
</ValidationRule>